--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.1",
+    "react-select": "^5.3.2",
     "zod": "^3.17.3"
   },
   "devDependencies": {
