--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.1",
     "react-select": "^5.3.2",
+    "swr": "^1.3.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
