--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.1",
+    "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
     "swr": "^1.3.0",
     "zod": "^3.17.3"
